gateway/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birds-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost  # or use a custom domain via /etc/hosts
    http:
      paths:
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 3200
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui-service
            port:
              number: 5173
